--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Hanbyul 9"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "열심히 **공부하는** 블로그."
+  bio              : "내가 쓰고 내가 **보려고** 기록하는 블로그. 인간의 기억은 유한하기에.."
   location         : "Seoul, Korea"
   email            :
   links:
