--- a/_config.yml
+++ b/_config.yml
@@ -86,19 +86,19 @@ defaults:
       path: "_posts"
       type: posts
     values:
-      layout: post
+      layout: tags
       share: true
 
 # Site Author
 author:
-  name:
-  picture:
-  email:
-  twitter:
-  links:
-    - title:
-      url:
-      icon:
+  name: hanbyul9
+  picture: 
+  email: beammeupplzz@gmail.com
+#  twitter:
+#  links:
+#    - title:
+#      url:
+#      icon:
 
 # Footer Links
 footer_links:
