--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ remote_theme: mmistakes/so-simple-theme
 skin: "/assets/css/skins/default.css"
 locale: en-US
 title: "hanbyul9's blog"
-description: "기록하는 블로그.."
+description: "code hard, travle hard..."
 baseurl: ""# the subpath of your site, e.g. "/blog"
 url: "https://hanbyul9.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: "/images/byul.png" # path of site logo, e.g. "/images/logo.png"
