--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@
     url: /posts/
   - title: Categories
     url: /categories/
-  - title: Tages
-    url: /tags/
+  - title: Search
+    url: /search/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
