--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ navigation:
     url: /
   - name: About
     url: /about
+  - name: Tags
+    url: /tags
   - name: Archive
     url: /archive
   - name: Github
